# micropy-cli

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .python-version  .readthedocs.yml  .release-please-manifest.json  .tool-versions  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  __main__.py  project.py  pyproject.toml  release-please-config.json  renovate.json  renovate.json5  setup.cfg  setup.py  tox.ini
.chglog/: config.yml
.github/: dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/actions/setup-micropy/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: changelog.yml  codeql-analysis.yml  main.yml  publish.yml  release.yml
docs/: base.md  cli.rst  conf.py  header.rst  index.rst  modules.rst  requirements.txt
docs/_autosummary/: micropy.config.config_source.rst  micropy.config.rst  micropy.exceptions.rst  micropy.main.rst  micropy.packages.rst  micropy.project.modules.rst  micropy.project.rst  micropy.rst  micropy.stubs.rst  micropy.stubs.source.rst  micropy.utils.rst
micropy/: __init__.py  __main__.py  cli.py  exceptions.py  logger.py  main.py  micropy.py  project.py  stubs.py
micropy/app/: __init__.py  main.py  stubs.py
micropy/config/: __init__.py  config.py  config_dict.py  config_json.py  config_source.py
micropy/data/: __init__.py  sources.json
micropy/data/schemas/: firmware.json  stubs.json
micropy/project/: __init__.py  checks.py  project.py  template.py
micropy/project/modules/: __init__.py  modules.py  packages.py  stubs.py  templates.py
micropy/project/template/: .gitignore  .pylintrc  pymakr.conf
micropy/pyb/: abc.py  backend_rshell.py  backend_upydevice.py  consumers.py  pydevice.py
micropy/pyd/: __init__.py  abc.py  backend_rshell.py  backend_upydevice.py  consumers.py  pydevice.py
micropy/stubs/: __init__.py  firmware.py  manifest.py  package.py  repo.py  repo_package.py  repository_info.py  schema.json  source.py  stubs.py
micropy/stubs/repositories/: __init__.py  micropy.py  micropython.py
micropy/template/: dotpylintrc
micropy/template/dotvscode/: settings.json
micropy/template/{{ cookiecutter.project }}/: .pylintrc
micropy/template/{{ cookiecutter.project }}/src/: boot.py  main.py
micropy/utils/: __init__.py  _compat.py  decorators.py  helpers.py  pybwrapper.py  stub.py  types.py  utils.py  validate.py
scripts/: export-docs-reqs.sh
template/: pymakr.conf
tests/: conftest.py  test_app_main.py  test_checks.py  test_cli.py  test_config.py  test_firmware.py  test_highlevel.py  test_main.py  test_micropy.py  test_packages.py  test_project.py  test_pyboardwrapper.py  test_pyd.py  test_stub_source.py  test_stubs.py  test_stubs_repo.py  test_template.py  test_utils.py  test_validator.py
tests/app/: conftest.py  test_main.py  test_stubs.py
tests/data/: test_repo.json  test_source.json  test_source.xml  test_sources.json
tests/data/esp32_test_stub/: info.json
tests/data/esp32_test_stub/frozen/: ntptime.pyi
tests/data/esp32_test_stub/stubs/: machine.py  modules.json
tests/data/esp8266_firmknown_stub/: modules.json
tests/data/esp8266_test_stub/: info.json  math.py  micropython.py  modules.json  sys.py  time.py
tests/data/esp8266_test_stub/frozen/: ntptime.py
tests/data/fware_test_stub/: info.json
tests/data/fware_test_stub/frozen/: utarfile.py  utarfile.pyi  utokenize.py  utokenize.pyi
tests/data/project_test/: .pylintrc  micropy.json
tests/data/stubber_test_stub/: micropython.py  modules.json
tests/snapshots/: snap_test_template.py
tests/test_stubs/: esp32_test_stub  esp8266_test_stub
tests/test_stubs/bad_test_stub/: modules.json
tests/test_stubs/esp32_test_stub/: modules.json
tests/test_stubs/esp32_test_stub/frozen/: ntptime.pyi
tests/test_stubs/esp32_test_stub/stubs/: machine.py
tests/test_stubs/esp8266_test_stub/: info.json
tests/test_utils/: pass.json
tests/test_validator/: schema.json
